force-app/main/default/objects/OfferBundle__c/OfferBundle__c.object-meta.xml
<CustomObject>
    <label>Bundle</label>
    <nameField>
        <label>Bundle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bundles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>