force-app/main/default/objects/OfferBundle__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Bundle Discount</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>