force-app/main/default/objects/OfferBundle__c/fields/LinesCount__c.field-meta.xml
<CustomField>
    <fullName>LinesCount__c</fullName>
    <label>Number of Lines</label>
    <summaryForeignKey>OfferLineItem__c.Bundle__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>