force-app/main/default/objects/OfferBundle__c/fields/LinesTotal__c.field-meta.xml
<CustomField>
    <fullName>LinesTotal__c</fullName>
    <label>Lines Total</label>
    <summarizedField>OfferLineItem__c.TotalPrice__c</summarizedField>
    <summaryForeignKey>OfferLineItem__c.Bundle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>