force-app/main/default/objects/OfferBundle__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <label>Offer</label>
    <referenceTo>Offer__c</referenceTo>
    <relationshipLabel>Bundles</relationshipLabel>
    <relationshipName>Children</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>