force-app/main/default/objects/OfferBundle__c/fields/QtyLines__c.field-meta.xml
<CustomField>
    <fullName>QtyLines__c</fullName>
    <label>Qty Lines</label>
    <summarizedField>OfferLineItem__c.Quantity__c</summarizedField>
    <summaryForeignKey>OfferLineItem__c.Bundle__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>